# molting

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/molt/: __init__.py
src/molting/: __init__.py  main.py
tests/: test_main.py
