[tool.poetry]
name = "molting"
version = "0.2.0"
description = "Automatically bump your project files to the latest version."
authors = ["Lucas Melin <lucas.melin@gmail.com>"]
repository = "https://github.com/lucasmelin/molting"
license = "MIT"

[tool.poetry.scripts]
molting = "molting.main:cli"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
nox = "^2022.1.7"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
