[tool.poetry]
name = "molting"
version = "0.3.1"
description = "Automatically bump your project files to the latest version."
authors = ["Lucas Melin <lucas.melin@gmail.com>"]
repository = "https://github.com/lucasmelin/molting"
homepage = "https://github.com/lucasmelin/molting"
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lucasmelin/molting/issues"

[tool.poetry.scripts]
molting = "molting.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
nox = "^2022.1.7"
pytest = "^7.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
black = "^22.1.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
